# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import reportRouter from "./report";
 import usersRouter from "./users";
 import inspectionsRouter from "./inspections";
 import condominiosRouter from "./condominios";
+import assetsRouter from "./assets";
+import dashboardRouter from "./dashboard";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(reportRouter);
 router.use(usersRouter);
 router.use(inspectionsRouter);
 router.use(condominiosRouter);
+router.use(assetsRouter);
+router.use(dashboardRouter);
 
 export default router;
